# altrus-core-mock

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  fault_manager.yml  intent_rules.yml  package.xml  sample_publisher_emotion.py  sample_publisher_locomotion.py  sample_publisher_telemedicine.py  setup.cfg  setup.py
.github/workflows/: python-ci.yml
altrus_mock_middleware/: mock_middleware_ros.py
docs/: TEACHING_PLAN.md
